examples/type_system/failing/144_guarded_wildcard_only_non_exhaustive_targeted.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/144_guarded_wildcard_only_non_exhaustive_targeted.flx
// error[E015]: Non-Exhaustive Match
//
// Match is not exhaustive: 1 missing pattern.
//
//   examples/type_system/failing/144_guarded_wildcard_only_non_exhaustive_targeted.flx:27:14
//    |
// 27 |     let _y = match x {
//    |              ^^^^^^^^^
// 28 |         _ if x > 0 -> 1
//    | ^^^^^^^^^^^^^^^^^^^^^^^
// 29 |     }
//    | ^^^^^
//
// Hint:
//   Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E015

// E015: guarded wildcard does not guarantee exhaustiveness.
fn main() -> Unit {
    let x = 2
    let _y = match x {
        _ if x > 0 -> 1
    }
}
